# x-config

./: pyproject.toml
.github/workflows/: pypi-deploy.yaml
x_config/: __init__.py  template.mako
