[tool.poetry]
name = "x-config"
version = "0.1.0"
description = "Services configuration"
authors = ["Dmytro Smyk <porovozls@gmail.com>"]
readme = "README.md"
packages = [{include = "x_config"}]

[tool.poetry.dependencies]
python = ">=3.9,<4"
pyyaml = ">=6,<7"
python-dotenv = ">=1,<2"
mako = ">=1.3,<1.4"
pydantic = ">=2,<3"
boto3 = ">=1.19,<1.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
